--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profile</title>
-
+    <!-- link css -->
+    <link rel="stylesheet" href="style/profil.css">
+    
     <!-- Ister EGG-->
      <link rel="shortcut icon" href="/image/akmal_favicon.jpg" type="image/x-icon">
-
-    <!-- link css -->
-    <link rel="stylesheet" href="/style/profil.css">
 
     <!-- font poppins -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
