--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WESTERLING</title>
   <!-- link hubung style/index.css -->
-  <link rel="stylesheet" href="/style/index.css">
+  <link rel="stylesheet" href="style/index.css">
   <style>
     * {
       margin: 0;
