--- a/profile.html
+++ b/profile.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>profile</title>
     <!-- link css -->
-    <link rel="stylesheet" href="style/profil.css">
-    
+    <link rel="stylesheet" href="style/profile.css">
+
     <!-- Ister EGG-->
      <link rel="shortcut icon" href="/image/akmal_favicon.jpg" type="image/x-icon">
 
