--- a/profile.html
+++ b/profile.html
@@ -167,35 +167,6 @@
       </div>
     </div>
   </section>
-
-  <script>
-    // JavaScript untuk hamburger menu
-    const mobileMenu = document.getElementById('mobile-menu');
-    const navMenu = document.getElementById('nav-menu');
-
-    if (mobileMenu && navMenu) {
-      mobileMenu.addEventListener('click', function() {
-        this.classList.toggle('active');
-        navMenu.classList.toggle('active');
-      });
-
-      // Close menu ketika klik link
-      const navLinks = document.querySelectorAll('.menu a');
-      navLinks.forEach(link => {
-        link.addEventListener('click', () => {
-          mobileMenu.classList.remove('active');
-          navMenu.classList.remove('active');
-        });
-      });
-
-      // Close menu ketika klik di luar
-      document.addEventListener('click', (e) => {
-        if (!e.target.closest('.atas')) {
-          mobileMenu.classList.remove('active');
-          navMenu.classList.remove('active');
-        }
-      });
-    }
-  </script>
+  <script src="js/script.js"></script>
 </body>
 </html>
